# FK-RFdiffusion

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: binder_design.ipynb  diffusion.ipynb  unconditional_design.ipynb
fk_rfdiffusion/: __init__.py  run_inference_guided.py  utils.py
fk_rfdiffusion/config/: base.yaml  utils.py
fk_rfdiffusion/feynman_kac/: feynman_kac.py
fk_rfdiffusion/feynman_kac/reward/: __init__.py  base.py  factory.py  interface.py  secondary_structure.py  sequence.py
fk_rfdiffusion/feynman_kac/reward/configs/: __init__.py  presets.py  presets.yaml
patches/: rfdiffusion_timestep_override.patch
