[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FK-RFdiffusion"
version = "0.1.0"
description = "Feynman-Kac guided protein design using RFdiffusion"
authors = [
    {name = "Erik Hartman"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "biopython",
    "pandas",
    "tqdm",
    "pydssp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/ErikHartman/fk-rfdiffusion"
Repository = "https://github.com/ErikHartman/fk-rfdiffusion"

[tool.setuptools.packages.find]
where = ["."]
include = ["fk_rfdiffusion*"]
exclude = ["tests*", "examples*"]
